refactor code based on comments
Signed-off-by: Chenyang Ji <cyji@amazon.com>